--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   flutter_svg: ^2.0.10+1
   persistent_bottom_nav_bar_v2: ^5.2.3
   dotted_border: ^2.1.0
+  badges: ^3.1.2
   # ============================= #
 
 dev_dependencies:
