--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,9 @@ dependencies:
   persistent_bottom_nav_bar_v2: ^5.2.3
   dotted_border: ^2.1.0
   badges: ^3.1.2
+  flutter_bloc: ^8.1.1
+  bloc: ^8.1.4
+  meta: ^1.11.0
   # ============================= #
 
 dev_dependencies:
