--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   flutter_bloc: ^8.1.1
   bloc: ^8.1.4
   meta: ^1.11.0
+  dio: ^5.4.3+1
+  get_it: ^7.7.0
   # ============================= #
 
 dev_dependencies:
