--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,7 +41,7 @@ dependencies:
   bloc: ^8.1.4
   meta: ^1.11.0
   dio: ^5.4.3+1
-  get_it: ^7.7.0
+  mask_text_input_formatter: ^2.9.0
   # ============================= #
 
 dev_dependencies:
