--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   meta: ^1.11.0
   dio: ^5.4.3+1
   mask_text_input_formatter: ^2.9.0
+  url_launcher: ^6.2.6
   # ============================= #
 
 dev_dependencies:
