--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,17 +32,18 @@ dependencies:
     sdk: flutter
 
   # Подключаемые пакеты приложения:
-  cupertino_icons: ^1.0.6
-  flutter_svg: ^2.0.10+1
   persistent_bottom_nav_bar_v2: ^5.2.3
+  mask_text_input_formatter: ^2.9.0
+  cupertino_icons: ^1.0.6
+  pin_code_fields: ^8.0.1
+  flutter_svg: ^2.0.10+1
   dotted_border: ^2.1.0
-  badges: ^3.1.2
   flutter_bloc: ^8.1.1
+  url_launcher: ^6.2.6
+  badges: ^3.1.2
   bloc: ^8.1.4
   meta: ^1.11.0
   dio: ^5.4.3+1
-  mask_text_input_formatter: ^2.9.0
-  url_launcher: ^6.2.6
   # ============================= #
 
 dev_dependencies:
