--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   # Подключаемые пакеты приложения:
   persistent_bottom_nav_bar_v2: ^5.2.3
   mask_text_input_formatter: ^2.9.0
+  timer_count_down: ^2.2.0
   cupertino_icons: ^1.0.6
   pin_code_fields: ^8.0.1
   flutter_svg: ^2.0.10+1
@@ -44,6 +45,7 @@ dependencies:
   bloc: ^8.1.4
   meta: ^1.11.0
   dio: ^5.4.3+1
+  
   # ============================= #
 
 dev_dependencies:
@@ -101,3 +103,7 @@ flutter:
         - asset: assets\fonts\roboto\Roboto-Regular.ttf
         - asset: assets\fonts\roboto\Roboto-Thin.ttf
         - asset: assets\fonts\roboto\Roboto-ThinItalic.ttf
+    #
+    - family: Inter
+      fonts:
+        - asset: assets\fonts\inter\Inter-SemiBold.ttf
