--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   # Подключаемые пакеты приложения:
   persistent_bottom_nav_bar_v2: ^5.2.3
   mask_text_input_formatter: ^2.9.0
+  shared_preferences: ^2.2.3
   timer_count_down: ^2.2.0
   cupertino_icons: ^1.0.6
   pin_code_fields: ^8.0.1
@@ -41,10 +42,11 @@ dependencies:
   dotted_border: ^2.1.0
   flutter_bloc: ^8.1.1
   url_launcher: ^6.2.6
+  provider: ^6.1.2
   badges: ^3.1.2
-  bloc: ^8.1.4
   meta: ^1.11.0
   dio: ^5.4.3+1
+  bloc: ^8.1.4
   
   # ============================= #
 
